# uxid

./: .gitignore  README.md  index.md
impl/go/: go.mod  go.sum  uxid.go  uxid_spec_0001_setup_api_test.go  uxid_spec_0101_basic_decoding_test.go
impl/go/cli/: main.go
impl/py/: README.md  setup.py
impl/py/test/spec/: 0001_setup_api_test.py  0101_basic_decoding_test.py
impl/py/uxid/: __init__.py  api.py  uxid.py
impl/rb/: .rubocop.yml  .simplecov  CHANGELOG.md  Gemfile  README.md  Rakefile  uxid.gemspec
impl/rb/lib/: uxid.rb
impl/rb/lib/tasks/: bundler.rake  check.rake  linting.rake  quality.rake  test.rake
impl/rb/lib/uxid/: crockford.rb  encoder.rb  model.rb  version.rb
impl/rb/test/: test_helper.rb  uxid_test.rb
impl/rb/test/spec/: 0001_setup_api_test.rb  0101_basic_decoding_test.rb
impl/rb/test/uxid/: rand_size_test.rb  size_test.rb
impl/rs/: Cargo.toml
impl/rs/src/: main.rs
impl/ts/: .eslintignore  .eslintrc.yaml  .npmignore  .prettierrc.yaml  README.md  package.json  tsconfig.json
impl/ts/src/: uxid.js  uxid.ts
impl/ts/test/: uxid.test.js  uxid.test.ts
impl/ts/test/spec/: 0001-setup-api.test.ts  0101-basic-decoding.test.ts
spec/: README.md
spec/00_setup/: 01_api.yaml
spec/01_basic/: 01_decoding.yaml
spec_generator/: Makefile  generate.exs  mix.exs
spec_generator/templates/: ex_spec.liquid  go_spec.liquid  py_spec.liquid  rb_spec.liquid  ts_spec.liquid
