[package]
name = "uxid"
version = "0.0.1"
authors = ["JohnnyT <ubergeek3141@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "../../README.md"

description = "User eXperience based IDentifiers"
keywords = ["uxid", "sortable", "identifier"]

repository = "https://github.com/riddler/uxid"

[dependencies]
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = "0.4"
rand = "0.6"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
